# rex

./: .gitmodules  CMakeLists.txt  armtest.sh  rex.h  rexlang.md  rexlang_vm.c  rexlang_vm.h  rexlang_vm_impl.h  test_cases.h  tests.c
docs/: rex.md  sys00-control.md  sys01-memory.md  sys02-filesystem.md  sys03-ppux.md
rcc/: CMakeLists.txt  gen.sh  rcc.c  rex_builder.h  rex_reader.h  rex_verifier.h
src/: f64_test.cpp  f64dec.c  f64dec.h  f64dec_test.cpp  f64enc.c  f64enc.h  f64enc_test.cpp  frame.c  frame.h  gen.sh  rex.cpp  rex.fbs  rex_generated.h
